k8s/traefik/traefik.blitzshare-api-crd.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: blitzshare-api-crd
spec:
  routes:
    - kind: Rule
      match: PathPrefix(`/api`)
      middlewares:
        - name: strip-prefix
      services:
        - kind: Service
          name: blitzshare-api-svc
          port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
spec:
  stripPrefix:
    prefixes:
      - /api
    forceSlash: false
